Moved start game button. Appears to be some game-logic issues, allowing you to play cards when you're not supposed to and the dealer index isn't shifting properly.

--- a/Client/styles/table.css
+++ b/Client/styles/table.css
@@ -36,10 +36,6 @@ html, body {
 }
 
 #scoreboard-button {
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
 }
 
 #hand {
